blog page alignment fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3221,9 +3221,8 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#400a6f",endCo
 
 
 #blog-list .card-title {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-  color: #2c3e50;
+   line-height: 1.7;
+   padding-bottom: 20px;
 }
 
 #blog-list .card-text {
